--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -14,9 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - run: npm ci
-      - run: npm test
-      - run: npm run build
+      - run: npm help
 
   Run-PSScriptAnalyzer-on-Windows:
     name: Run PSScriptAnalyzer on Windows
@@ -32,3 +30,13 @@ jobs:
         shell: pwsh
         run: |
           Get-ScriptAnalyzerRule
+  
+  Run-PSVersion-on-Windows:
+    name: Run PSVersion on Windows
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run PS version
+        shell: pwsh
+        run: |
+          $PSVersionTable.PSVersion
