--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,3 +1,10 @@
+name: Run commands on different operating systems
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+    
  - name: Create Artifact Folder
    run: New-Item -Path '${{ github.workspace }}' -Name "Artifacts" -ItemType "directory"
    shell: powershell
