--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main     
+    branches: [ main ]
 jobs:
   Run-arifact-on-Ubuntu:
     name: Run arifact on Ubuntu
