--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,6 @@ jobs:
 
     - name: Make copy of sample.txt 📚
       run: |
-        chmod u+x "${GITHUB_WORKSPACE}/files/sample.txt"
-        bash "${GITHUB_WORKSPACE}/files/sample.txt"
+        chmod u+x "${GITHUB_WORKSPACE}/Files/sample.txt"
+        bash "${GITHUB_WORKSPACE}/Files/sample.txt"
 
