--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,11 @@ jobs:
 
     - name: Make copy of sample.txt 📚
       run: |
-        cp "${GITHUB_WORKSPACE}/Files/sample.txt"
+        cp ${GITHUB_WORKSPACE}/Files/sample.txt path/to/artifact
+    - name: Create a artifact
+      uses: actions/upload-artifact@v3
+      with:
+            name: my-artifact
+            path: path/to/artifact/files/samples.txt
         
 
