--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -11,6 +11,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
             name: my-artifact
-            path: ${GITHUB_WORKSPACE}/files/samples.txt
+            path: ${GITHUB_WORKSPACE}/files
         
 
