--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -2,15 +2,21 @@ name: Copy my_file.json to tests subdirectory
 on: [push, pull_request, workflow_dispatch]
 jobs:
   run:
-    runs-on: [ubuntu-latest]
+    runs-on: [windows-latest]
     steps:
     - name: Checkout 🛎️
       uses: actions/checkout@v2
+    - name: Create Artifact Folder
+      run: New-Item -Path '${{ github.workspace }}' -Name "Files" -ItemType "directory"
+      shell: powershell
+    - name: Copy Scripts
+      run: Copy 'Files/' '${{ github.workspace }}/Files/sample.txt'
+      shell: powershell
       
     - name: Create a artifact
       uses: actions/upload-artifact@v3
       with:
             name: my-artifact
-            path: ${GITHUB_WORKSPACE}/files
+            path: ${GITHUB_WORKSPACE}/Files
         
 
