--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,6 +17,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
             name: my-artifact
-            path: ${GITHUB_WORKSPACE}/Files
+            path: ${GITHUB_WORKSPACE}/Artifacts
         
 
