--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,6 +18,6 @@ jobs:
           connection-string: DefaultEndpointsProtocol=https;AccountName=acnintestccinfrasa;AccountKey=169zg+KE4dBlqLS3//H3eb/+ysB7wHAq35gU9FpxxK8NO+x/gZ9SASjtSulAVsHBagwuw3iK6OOZ+AStlBRfFw==;EndpointSuffix=core.windows.net
           name: my-artifact
           path: ${{ github.workspace }}/Files/sample.txt
-    - run: cat ${{ github.workspace }}/Files/sample.txt
+    - run: cat my-artifact
         
 
