--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,4 +1,4 @@
-name: Copy my_file.json to tests subdirectory
+name: samples.txt to storage account
 on: [push, pull_request, workflow_dispatch]
 jobs:
   run:
@@ -28,6 +28,6 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-            az storage blob upload-batch --account-name "acnintestccinfrasa"  --auth-mode key -d '$web' -s .
+            az storage blob upload-batch --account-name "acnintestccinfrasa" --auth-mode key -d '$web' -s .
         
 
