--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,4 +19,8 @@ jobs:
           name: my-artifact
           path: ${{ github.workspace }}/Files/sample.txt
     - run: cat ${{ github.workspace }}/Files/sample.txt
+    - name: Azure Login
+    - uses: azure/login@v1
+      with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
         
