--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,5 +27,5 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-            az storage blob upload-batch --account-name "acnintestccinfrasa" --auth-mode key -d '$web' -s .
+            az storage blob upload-batch --account-name "acnintestccinfrasa" --auth-mode login -d '${{ github.workspace }}/Files/sample.txt' -s .
         
